# twitterclone2

./: README.md  db.sqlite3  pyproject.toml
authentication/: forms.py  views.py
notification/: models.py  views.py
notification/migrations/: 0001_initial.py
templates/: base.html  generic_form.html  index.html  notifications.html  profile.html  tweet_detail.html
tweet/: forms.py  models.py  views.py
tweet/migrations/: 0001_initial.py
twitterclone/: settings.py  urls.py
twitterclone.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
twitteruser/: models.py  views.py
twitteruser/migrations/: 0001_initial.py
